@@ -1,99 +1,0 @@
-#define FUNCNAME_nulcmd 0
-#define FUNCNAME_quitfm 1
-#define FUNCNAME_adBmark 2
-#define FUNCNAME_backBf 3
-#define FUNCNAME_goLineF 4
-#define FUNCNAME_ldBmark 5
-#define FUNCNAME_ctrCsrH 6
-#define FUNCNAME_ctrCsrV 7
-#define FUNCNAME_cooLst 8
-#define FUNCNAME_deletePrevBuf 9
-#define FUNCNAME_dictword 10
-#define FUNCNAME_dictwordat 11
-#define FUNCNAME_ldown1 12
-#define FUNCNAME_svSrc 13
-#define FUNCNAME_editBf 14
-#define FUNCNAME_editScr 15
-#define FUNCNAME_goLineL 16
-#define FUNCNAME_escbmap 17
-#define FUNCNAME_escmap 18
-#define FUNCNAME_execsh 19
-#define FUNCNAME_extbrz 21
-#define FUNCNAME_linkbrz 22
-#define FUNCNAME_rFrame 23
-#define FUNCNAME_goURL 24
-#define FUNCNAME_goLine 25
-#define FUNCNAME_followA 26
-#define FUNCNAME_ldhelp 27
-#define FUNCNAME_ldHist 28
-#define FUNCNAME_pginfo 29
-#define FUNCNAME_initMailcap 30
-#define FUNCNAME_susp 31
-#define FUNCNAME_col1L 32
-#define FUNCNAME_linbeg 33
-#define FUNCNAME_linend 34
-#define FUNCNAME_curlno 35
-#define FUNCNAME_topA 36
-#define FUNCNAME_lastA 37
-#define FUNCNAME_ldfile 38
-#define FUNCNAME_mainMn 39
-#define FUNCNAME__mark 40
-#define FUNCNAME_chkNMID 41
-#define FUNCNAME_chkURL 42
-#define FUNCNAME_mouse 44
-#define FUNCNAME_msToggle 45
-#define FUNCNAME_movD 46
-#define FUNCNAME_movD1 47
-#define FUNCNAME_movL 48
-#define FUNCNAME_movL1 49
-#define FUNCNAME_movR 50
-#define FUNCNAME_movR1 51
-#define FUNCNAME_movU 52
-#define FUNCNAME_movU1 53
-#define FUNCNAME_msgs 54
-#define FUNCNAME_nextD 55
-#define FUNCNAME_nextL 56
-#define FUNCNAME_nextLU 57
-#define FUNCNAME_nextA 58
-#define FUNCNAME_nextMk 59
-#define FUNCNAME_pgFore 60
-#define FUNCNAME_nextR 61
-#define FUNCNAME_nextRD 62
-#define FUNCNAME_nextU 63
-#define FUNCNAME_movRW 64
-#define FUNCNAME_ldOpt 67
-#define FUNCNAME_pcmap 68
-#define FUNCNAME_curURL 69
-#define FUNCNAME_peekIMG 70
-#define FUNCNAME_peekURL 71
-#define FUNCNAME_pipeBuf 72
-#define FUNCNAME_pipesh 73
-#define FUNCNAME_prevA 74
-#define FUNCNAME_prevMk 75
-#define FUNCNAME_pgBack 76
-#define FUNCNAME_movLW 77
-#define FUNCNAME_svBuf 78
-#define FUNCNAME_qquitfm 79
-#define FUNCNAME_readsh 80
-#define FUNCNAME_rdrwSc 81
-#define FUNCNAME_reMark 82
-#define FUNCNAME_reload 83
-#define FUNCNAME_col1R 84
-#define FUNCNAME_svI 86
-#define FUNCNAME_svA 87
-#define FUNCNAME_srchfor 89
-#define FUNCNAME_srchbak 90
-#define FUNCNAME_srchnxt 92
-#define FUNCNAME_srchprv 93
-#define FUNCNAME_selBuf 94
-#define FUNCNAME_selMn 95
-#define FUNCNAME_setEnv 96
-#define FUNCNAME_setOpt 97
-#define FUNCNAME_shiftl 99
-#define FUNCNAME_shiftr 100
-#define FUNCNAME_vwSrc 101
-#define FUNCNAME_submitForm 102
-#define FUNCNAME_lup1 104
-#define FUNCNAME_dispVer 105
-#define FUNCNAME_followI 108
-#define FUNCNAME_wrapToggle 110
